[gd_scene load_steps=3 format=3 uid="uid://c08x02i86huho"]

[ext_resource type="Script" path="res://UI/Final_Selection.gd" id="1_2irxn"]

[sub_resource type="LabelSettings" id="LabelSettings_wh1g1"]
font_size = 12

[node name="CanvasLayer" type="CanvasLayer"]
process_mode = 2
script = ExtResource("1_2irxn")

[node name="Final1" type="Button" parent="."]
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 20.0
offset_top = -60.0
offset_right = 175.0
offset_bottom = -29.0
grow_vertical = 2
size_flags_horizontal = 0
text = "Spell1"

[node name="Panel" type="Panel" parent="Final1"]
clip_contents = true
layout_mode = 0
offset_top = 30.0
offset_right = 156.0
offset_bottom = 224.0

[node name="Info" type="Label" parent="Final1/Panel"]
layout_mode = 0
offset_top = 117.0
offset_right = 148.0
offset_bottom = 193.0
text = "Bal Bala bala abalaabaabala "
label_settings = SubResource("LabelSettings_wh1g1")
horizontal_alignment = 1
autowrap_mode = 2

[node name="Final2" type="Button" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -77.5
offset_top = -60.0
offset_right = 77.5
offset_bottom = -29.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 0
text = "Spell1"

[node name="Panel" type="Panel" parent="Final2"]
clip_contents = true
layout_mode = 0
offset_top = 30.0
offset_right = 156.0
offset_bottom = 224.0

[node name="Info" type="Label" parent="Final2/Panel"]
layout_mode = 0
offset_top = 117.0
offset_right = 148.0
offset_bottom = 193.0
text = "Bal Bala bala abalaabaabala "
label_settings = SubResource("LabelSettings_wh1g1")
horizontal_alignment = 1
autowrap_mode = 2

[node name="Final3" type="Button" parent="."]
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -175.0
offset_top = -60.0
offset_right = -20.0
offset_bottom = -29.0
grow_horizontal = 0
grow_vertical = 2
size_flags_horizontal = 0
text = "Spell1"

[node name="Panel" type="Panel" parent="Final3"]
clip_contents = true
layout_mode = 0
offset_top = 30.0
offset_right = 156.0
offset_bottom = 224.0

[node name="Info" type="Label" parent="Final3/Panel"]
layout_mode = 0
offset_top = 117.0
offset_right = 148.0
offset_bottom = 193.0
text = "Bal Bala bala abalaabaabala "
label_settings = SubResource("LabelSettings_wh1g1")
horizontal_alignment = 1
autowrap_mode = 2

[connection signal="pressed" from="Final1" to="." method="_on_final_1_pressed"]
[connection signal="pressed" from="Final2" to="." method="_on_final_2_pressed"]
[connection signal="pressed" from="Final3" to="." method="_on_final_3_pressed"]
